Fix button alignment using flexbox

--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -1031,13 +1031,13 @@ table td a {
 		color: #ffffff !important;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.5rem;
+		font-size: 0.8rem;
 		font-weight: 300;
-		height: 2.0rem;
+		height: 2.75rem;
 		letter-spacing: 0.2rem;
-		line-height: 2.0rem;
+		line-height: 2.75rem;
 		outline: 0;
-		padding: 0 0.8rem 0 0.8rem;
+		padding: 0 1.25rem 0 1.35rem;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
